--- a/index.html
+++ b/index.html
@@ -29,30 +29,13 @@
        Respond is a polyfill for min/max-width media queries. Modernizr enables HTML5 elements & feature detects;
        for optimal performance, create your own custom Modernizr build: www.modernizr.com/download/ -->
   <script src="js/libs/modernizr-2.0.6.min.js"></script>
-</head>
-
-<body>
-  <header>
-
-  </header>
-  <div role="main">
-
-  </div>
-  <footer>
-
-  </footer>
-
-
-  <!-- JavaScript at the bottom for fast page loading -->
 
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.4.min.js"><\/script>')</script>
-
 
   <!-- scripts concatenated and minified via build script -->
-  <script defer src="js/plugins.js"></script>
-  <script defer src="js/script.js"></script>
+  <script defer="defer" src="js/plugins.js"></script>
+  <script defer="defer" src="js/script.js"></script>
   <!-- end scripts -->
 
 
@@ -65,12 +48,25 @@
     s.parentNode.insertBefore(g,s)}(document,'script'));
   </script>
 
+
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7 ]>
     <script defer src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
     <script defer>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
   <![endif]-->
+</head>
+
+<body>
+  <header>
+
+  </header>
+  <div role="main">
+
+  </div>
+  <footer>
+
+  </footer>
 
 </body>
 </html>
