--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!-- Consider adding a manifest.appcache: h5bp.com/d/Offline -->
-<!--[if gt IE 8]><!--> <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html
+	xmlns="http://www.w3.org/1999/xhtml"
+	lang="en"
+	xml:lang="en"
+
+	class="no-js">
+<!--<![endif]-->
 <head>
   <meta charset="UTF-8" />
 
